# TFG

./: .gitignore  README.md  prepareWorkspace.bat  pyproject.toml  requirements.txt  setup.py  startWorkspace.bat
railSim/: db.sqlite3  manage.py
railSim/railSim/: asgi.py  settings.py  urls.py  wsgi.py
railSim/railSimulator/: apps.py  views.py
railSim/railSimulator/static/: style.css
railSim/railSimulator/templates/railSimulator/: base.html  home.html  simulation.html
src/: Variable_Sim.txt  cantonCalculator.py  capacity.py  dbLibrary.py  generateDiagram.py  readYamlFiles.py  simLibrary.py
src/test/: test_dbLibrary.py  test_simLibrary.py
tfg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: generateDiagram.py
