[project]
name = "railsys"
version = "0.7"
description = "Stable pre-realease"
authors = [
    {name = "AMR-74",email = "151056908+AMR-74@users.noreply.github.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic (==1.15.2)",
    "anyio (==4.9.0)",
    "asgiref (==3.8.1)",
    "asttokens (==3.0.0)",
    "attrs (==25.3.0)",
    "bottle (==0.13.2)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "colorlog (==6.9.0)",
    "comm (==0.2.2)",
    "contourpy (==1.3.1)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.13)",
    "decorator (==5.2.1)",
    "distlib (==0.3.9)",
    "django (==5.2)",
    "dnspython (==2.7.0)",
    "dulwich (==0.22.8)",
    "executing (==2.2.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "fonttools (==4.57.0)",
    "geographiclib (==2.0)",
    "geopy (==2.4.1)",
    "greenlet (==3.1.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "installer (==0.7.0)",
    "ipykernel (==6.29.5)",
    "ipython (==9.0.2)",
    "ipython-pygments-lexers (==1.1.1)",
    "ipywidgets (==8.1.6)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jedi (==0.19.2)",
    "joblib (==1.4.2)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.7.2)",
    "jupyterlab-widgets (==3.0.14)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.8)",
    "mako (==1.3.9)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.1)",
    "matplotlib-inline (==0.1.7)",
    "mocker (==1.1.1)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.0)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.5)",
    "numpy (==2.2.4)",
    "optuna (==4.2.1)",
    "optuna-dashboard (==0.18.0)",
    "outcome (==1.3.0.post0)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "parso (==0.8.4)",
    "pbs-installer (==2025.4.9)",
    "pillow (==11.1.0)",
    "pip-tools (==7.4.1)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "pluggy (==1.5.0)",
    "prompt-toolkit (==3.0.50)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pycparser (==2.22)",
    "pygments (==2.19.1)",
    "pymongo (==4.11.3)",
    "pyparsing (==3.2.3)",
    "pyproject-hooks (==1.2.0)",
    "pysocks (==1.7.1)",
    "pytest (==8.3.5)",
    "pytest-mock (==3.14.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pywin32 (==310)",
    "pywin32-ctypes (==0.2.3)",
    "pyyaml (==6.0.2)",
    "pyzmq (==26.4.0)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.15.2)",
    "seaborn (==0.13.2)",
    "selenium (==4.31.0)",
    "setuptools (==79.0.1)",
    "shapely (==2.1.2)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "sqlalchemy (==2.0.40)",
    "sqlparse (==0.5.3)",
    "stack-data (==0.6.3)",
    "threadpoolctl (==3.6.0)",
    "tomlkit (==0.13.2)",
    "tornado (==6.4.2)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "trio (==0.29.0)",
    "trio-websocket (==0.12.2)",
    "trove-classifiers (==2025.4.28.22)",
    "typing-extensions (==4.13.1)",
    "tzdata (==2025.2)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.30.0)",
    "wcwidth (==0.2.13)",
    "websocket-client (==1.8.0)",
    "wheel (==0.45.1)",
    "widgetsnbextension (==4.0.14)",
    "win32-setctime (==1.2.0)",
    "wsproto (==1.2.0)",
    "zstandard (==0.23.0)",
    "cleo (==2.1.0)",
    "crashtest (==0.4.1)",
    "loguru (==0.7.3)",
    "poetry (==2.1.2)",
    "poetry-core (==2.1.2)",
    "robin @ git+https://github.com/JoseAngelMartinB/robin.git@a134b749a83ac97e60a3bad18933d64a28bf5fa0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
